@@ -1170,7 +1170,8 @@ aopOp (operand *op, const iCode *ic)
   }
 }
 
-// Get registers containing return type of function.
+// Get asmop for registers containing the return type of function
+// Returns 0 is the function does not have a return value or it is not returned in registers.
 static asmop *
 aopRet (const sym_link *ftype)
 {
