@@ -1,3 +1,9 @@
+2021-05-11 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCsymt.c,
+	  src/*/main.c:
+	  Make restriction on register parameters for vararg functions port-specific.
+
 2021-05-11 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>
 
 	* support/regression/tests/bug-3231.c:
